# Neural-Search-Engine

./: .gitignore  README.md  pyproject.toml
data/: chunks.jsonl  chunks_pretrain.jsonl  eval_set.json  index.faiss  tokenizer.json
ipynb/: rendered_first_version_with_MLM.html
notebooks/: data_analysis.ipynb
reports/: architecture.md  data_processing_search_evaluation.md  results.md  training_data_contrastive_hard_negatives.md
scripts/: bm25_search.py  build_corpus.py  build_index.py  dataset_collators.py  evaluate.py  loss_PE.py  mine_hard_negatives.py  search_neural.py  test_encoder.py  train_encoder.py  train_tokenizer.py
src/neural_search/cli/: bm25_search.py  build_corpus.py  build_index.py  cache_msmarco_pairs.py  dataset_collators.py  evaluate.py  evaluate_retrievers.py  mine_hard_negatives.py  pretrain_encoder.py  search_neural.py  slice_hard_negatives.py  train_encoder.py  train_tokenizer.py
src/neural_search/corpus/: chunker.py  extractor.py
src/neural_search/data/: __init__.py  collators.py  hard_negatives.py  jsonl.py  mlm_collator.py  mlm_dataset.py  msmarco.py
src/neural_search/encoder/: attention.py  block.py  config.py  encoder.py  feedforward.py  mlm_head.py  positional.py  pretrain.py  train.py
src/neural_search/evaluation/: __init__.py  eval_set.py  harness.py  metrics.py
src/neural_search/losses/: __init__.py  contrastive.py
src/neural_search/models/: __init__.py  positional_encoding.py
src/neural_search/retrieval/: base.py  bm25.py  neural.py
src/neural_search/tokenizer/: train.py
tests/: test_corpus.py  test_evaluation.py
